compiler/testData/diagnostics/tests/DelegationToJavaIface.kt
class TestIface(r : Runnable) : Runnable by r {}

class TestObject(o : <!CLASS_HAS_KOTLIN_ANALOG!>Object<!>) : <!CLASS_HAS_KOTLIN_ANALOG, DELEGATION_NOT_TO_TRAIT!>Object<!> by o {}